--- a/resources/assets/sass/_options.scss
+++ b/resources/assets/sass/_options.scss
@@ -27,7 +27,7 @@ $ubtn-namespace: '.button' !default; //prefix for all classes
 * The font size and height are used to set the base size for the buttons.
 * The size values will be used to calculate the larger and smaller button sizes.
 */
-$ubtn-bgcolor: #EEE !default;
+$ubtn-bgcolor: #ffcc00 !default;
 $ubtn-font-color: #666 !default;
 $ubtn-font-weight: 300 !default;
 $ubtn-font-size: 16px !default;
