stuck with post upadte

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -48,8 +48,34 @@ $margin: 1%;
   max-height: 70px;
 }
 
+.own_posts {
+  right: 10%;
+  width: 35%;
+  height: 30%;
+  top: 25%;
+  background: #008B8B;
+  position: absolute;
+  text-align: center;
+  }
+
+  .following_posts {
+  right: 10%;
+  width: 35%;
+  height: 30%;
+  top: 60%;
+  background: #008B8B;
+  position: absolute;
+  text-align: center;
+  }
+
+.contentWrap {
+  overflow: hidden;
+  max-height: 70px;
+}
+
 .icons {
   border: 1px solid red;
+  width: 710px;
 }
 
 .test img, .icons img {
@@ -58,7 +84,7 @@ $margin: 1%;
 }
 
 .test {
-  width: 500px;
+  width: 700px;
   overflow: hidden;
   height: 70px;
   background: #f5f5f5;
@@ -74,4 +100,8 @@ $margin: 1%;
       content: "";
     }
   }
+}
+
+.errors {
+  color: red;
 }
