--- a/public/css/app.css
+++ b/public/css/app.css
@@ -37,8 +37,34 @@ body {
   max-height: 70px;
 }
 
+.own_posts {
+  right: 10%;
+  width: 35%;
+  height: 30%;
+  top: 25%;
+  background: #008B8B;
+  position: absolute;
+  text-align: center;
+}
+
+.following_posts {
+  right: 10%;
+  width: 35%;
+  height: 30%;
+  top: 60%;
+  background: #008B8B;
+  position: absolute;
+  text-align: center;
+}
+
+.contentWrap {
+  overflow: hidden;
+  max-height: 70px;
+}
+
 .icons {
   border: 1px solid red;
+  width: 710px;
 }
 
 .test img,
@@ -48,7 +74,7 @@ body {
 }
 
 .test {
-  width: 500px;
+  width: 700px;
   overflow: hidden;
   height: 70px;
   background: #f5f5f5;
@@ -64,6 +90,10 @@ body {
 
 .test[placeholder]:empty:focus:before {
   content: "";
+}
+
+.errors {
+  color: red;
 }
 /*! @license
 *
