--- a/public/css/app.css
+++ b/public/css/app.css
@@ -209,16 +209,16 @@ body {
 
 .button {
   color: #666;
-  background-color: #ffcc00;
-  border-color: #ffcc00;
+  background-color: #fdfd96;
+  border-color: #fdfd96;
   font-weight: 300;
-  font-size: 16px;
+  font-size: 8px;
   font-family: "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   text-decoration: none;
   text-align: center;
-  line-height: 40px;
-  height: 40px;
-  padding: 0 40px;
+  line-height: 25px;
+  height: 25px;
+  padding: 0 25px;
   margin: 0;
   display: inline-block;
   -webkit-appearance: none;
@@ -245,7 +245,7 @@ body {
 
 .button:hover,
 .button:focus {
-  background-color: #ffcf0f;
+  background-color: #fdfda5;
   text-decoration: none;
   outline: none;
 }
@@ -255,9 +255,9 @@ body {
 .button.is-active {
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
   text-decoration: none;
-  background-color: #f2c40d;
-  border-color: #c29b00;
-  color: #cca300;
+  background-color: #f8f89b;
+  border-color: #fcfc5a;
+  color: #fcfc64;
   transition-duration: 0s;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
 }
@@ -600,43 +600,43 @@ body {
 .button-box,
 .button-square {
   padding: 0 !important;
-  width: 40px;
+  width: 25px;
 }
 
 .button-circle.button-giant,
 .button-box.button-giant,
 .button-square.button-giant {
-  width: 70px;
+  width: 43.75px;
 }
 
 .button-circle.button-jumbo,
 .button-box.button-jumbo,
 .button-square.button-jumbo {
-  width: 60px;
+  width: 37.5px;
 }
 
 .button-circle.button-large,
 .button-box.button-large,
 .button-square.button-large {
-  width: 50px;
+  width: 31.25px;
 }
 
 .button-circle.button-normal,
 .button-box.button-normal,
 .button-square.button-normal {
-  width: 40px;
+  width: 25px;
 }
 
 .button-circle.button-small,
 .button-box.button-small,
 .button-square.button-small {
-  width: 30px;
+  width: 18.75px;
 }
 
 .button-circle.button-tiny,
 .button-box.button-tiny,
 .button-square.button-tiny {
-  width: 24px;
+  width: 15px;
 }
 
 /*
@@ -652,13 +652,13 @@ body {
   background: none;
   border-width: 2px;
   border-style: solid;
-  line-height: 36px;
+  line-height: 21px;
 }
 
 .button-border:hover,
 .button-border-thin:hover,
 .button-border-thick:hover {
-  background-color: rgba(255, 214, 51, 0.9);
+  background-color: rgba(254, 254, 200, 0.9);
 }
 
 .button-border:active,
@@ -1009,7 +1009,7 @@ body {
 .button-giant.button-border-thick,
 .button-border-thin.button-giant,
 .button-border-thick.button-giant {
-  line-height: 66px;
+  line-height: 39.75px;
 }
 
 .button-border.button-jumbo,
@@ -1017,7 +1017,7 @@ body {
 .button-jumbo.button-border-thick,
 .button-border-thin.button-jumbo,
 .button-border-thick.button-jumbo {
-  line-height: 56px;
+  line-height: 33.5px;
 }
 
 .button-border.button-large,
@@ -1025,7 +1025,7 @@ body {
 .button-large.button-border-thick,
 .button-border-thin.button-large,
 .button-border-thick.button-large {
-  line-height: 46px;
+  line-height: 27.25px;
 }
 
 .button-border.button-normal,
@@ -1033,7 +1033,7 @@ body {
 .button-normal.button-border-thick,
 .button-border-thin.button-normal,
 .button-border-thick.button-normal {
-  line-height: 36px;
+  line-height: 21px;
 }
 
 .button-border.button-small,
@@ -1041,7 +1041,7 @@ body {
 .button-small.button-border-thick,
 .button-border-thin.button-small,
 .button-border-thick.button-small {
-  line-height: 26px;
+  line-height: 14.75px;
 }
 
 .button-border.button-tiny,
@@ -1049,7 +1049,7 @@ body {
 .button-tiny.button-border-thick,
 .button-border-thin.button-tiny,
 .button-border-thick.button-tiny {
-  line-height: 20px;
+  line-height: 11px;
 }
 
 /*
@@ -1063,8 +1063,8 @@ body {
   background: none;
   border: none;
   padding: 0 8px !important;
-  color: #ffcc00;
-  font-size: 20.8px;
+  color: #fdfd96;
+  font-size: 10.4px;
   font-weight: 200;
   /*
   * Borderless Button Colors
@@ -1124,39 +1124,39 @@ body {
 }
 
 .button-borderless.button-giant {
-  font-size: 36.4px;
-  height: 52.4px;
-  line-height: 52.4px;
+  font-size: 18.2px;
+  height: 34.2px;
+  line-height: 34.2px;
 }
 
 .button-borderless.button-jumbo {
-  font-size: 31.2px;
-  height: 47.2px;
-  line-height: 47.2px;
-}
-
-.button-borderless.button-large {
-  font-size: 26px;
-  height: 42px;
-  line-height: 42px;
-}
-
-.button-borderless.button-normal {
-  font-size: 20.8px;
-  height: 36.8px;
-  line-height: 36.8px;
-}
-
-.button-borderless.button-small {
   font-size: 15.6px;
   height: 31.6px;
   line-height: 31.6px;
 }
 
+.button-borderless.button-large {
+  font-size: 13px;
+  height: 29px;
+  line-height: 29px;
+}
+
+.button-borderless.button-normal {
+  font-size: 10.4px;
+  height: 26.4px;
+  line-height: 26.4px;
+}
+
+.button-borderless.button-small {
+  font-size: 7.8px;
+  height: 23.8px;
+  line-height: 23.8px;
+}
+
 .button-borderless.button-tiny {
-  font-size: 12.48px;
-  height: 28.48px;
-  line-height: 28.48px;
+  font-size: 6.24px;
+  height: 22.24px;
+  line-height: 22.24px;
 }
 
 /*
@@ -1167,23 +1167,23 @@ body {
 */
 
 .button-raised {
-  border-color: #e6b800;
+  border-color: #fdfd7d;
   border-style: solid;
   border-width: 1px;
-  line-height: 38px;
-  background: linear-gradient(#ffcf0f, #e6b800);
+  line-height: 23px;
+  background: linear-gradient(#fdfda5, #fdfd7d);
   box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.3), 0 1px 2px rgba(0, 0, 0, 0.15);
 }
 
 .button-raised:hover,
 .button-raised:focus {
-  background: linear-gradient(top, #ffd429, #dbaf00);
+  background: linear-gradient(top, #fefebe, #fcfc73);
 }
 
 .button-raised:active,
 .button-raised.active,
 .button-raised.is-active {
-  background: #f2c40d;
+  background: #f8f89b;
   box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.2), 0px 1px 0px white;
 }
 
@@ -1323,12 +1323,12 @@ body {
 .button-3d {
   position: relative;
   top: 0;
-  box-shadow: 0 7px 0 #997a00, 0 8px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 7px 0 #fbfb32, 0 8px 3px rgba(0, 0, 0, 0.2);
 }
 
 .button-3d:hover,
 .button-3d:focus {
-  box-shadow: 0 7px 0 #997a00, 0 8px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 7px 0 #fbfb32, 0 8px 3px rgba(0, 0, 0, 0.2);
 }
 
 .button-3d:active,
@@ -1337,7 +1337,7 @@ body {
   top: 5px;
   transition-property: all;
   transition-duration: .15s;
-  box-shadow: 0 2px 0 #997a00, 0 3px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 0 #fbfb32, 0 3px 3px rgba(0, 0, 0, 0.2);
 }
 
 /*
@@ -1797,10 +1797,10 @@ body {
   z-index: 1000;
   min-width: 100%;
   list-style-type: none;
-  background: rgba(255, 214, 51, 0.95);
+  background: rgba(254, 254, 200, 0.95);
   border-style: solid;
   border-width: 1px;
-  border-color: #cca300;
+  border-color: #fcfc64;
   font-family: "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   box-shadow: 0 2px 7px rgba(0, 0, 0, 0.2);
   border-radius: 3px;
@@ -1842,8 +1842,8 @@ body {
 
 .button-dropdown-list > li > a {
   display: block;
-  line-height: 40px;
-  font-size: 12.8px;
+  line-height: 25px;
+  font-size: 6.4px;
   padding: 5px 10px;
   float: none;
   color: #666;
@@ -1852,12 +1852,12 @@ body {
 
 .button-dropdown-list > li > a:hover {
   color: #5e5e5e;
-  background: #ffcf0f;
+  background: #fdfda5;
   text-decoration: none;
 }
 
 .button-dropdown-divider {
-  border-top: 1px solid #f0c000;
+  border-top: 1px solid #fdfd87;
 }
 
 /*
@@ -2264,43 +2264,43 @@ body {
 */
 
 .button-giant {
-  font-size: 28px;
-  height: 70px;
-  line-height: 70px;
-  padding: 0 70px;
+  font-size: 14px;
+  height: 43.75px;
+  line-height: 43.75px;
+  padding: 0 43.75px;
 }
 
 .button-jumbo {
-  font-size: 24px;
-  height: 60px;
-  line-height: 60px;
-  padding: 0 60px;
+  font-size: 12px;
+  height: 37.5px;
+  line-height: 37.5px;
+  padding: 0 37.5px;
 }
 
 .button-large {
-  font-size: 20px;
-  height: 50px;
-  line-height: 50px;
-  padding: 0 50px;
+  font-size: 10px;
+  height: 31.25px;
+  line-height: 31.25px;
+  padding: 0 31.25px;
 }
 
 .button-normal {
-  font-size: 16px;
-  height: 40px;
-  line-height: 40px;
-  padding: 0 40px;
+  font-size: 8px;
+  height: 25px;
+  line-height: 25px;
+  padding: 0 25px;
 }
 
 .button-small {
-  font-size: 12px;
-  height: 30px;
-  line-height: 30px;
-  padding: 0 30px;
+  font-size: 6px;
+  height: 18.75px;
+  line-height: 18.75px;
+  padding: 0 18.75px;
 }
 
 .button-tiny {
-  font-size: 9.6px;
-  height: 24px;
-  line-height: 24px;
-  padding: 0 24px;
+  font-size: 4.8px;
+  height: 15px;
+  line-height: 15px;
+  padding: 0 15px;
 }
