--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -25,7 +25,6 @@ $margin: 1%;
 }
 
 
-
 .test {
     width: 500px;
     height: 70px;
@@ -78,9 +77,9 @@ $margin: 1%;
   width: 710px;
 }
 
-.test img, .icons img {
-  width: 20px;
-  height: 20px;
+.test img, .icons img , .followee_posts img {
+  width: 24px;
+  height: 24px;
 }
 
 .test {
