working follow and post section. Now going to learn about search

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -77,7 +77,7 @@ $margin: 1%;
   width: 710px;
 }
 
-.test img, .icons img , .followee_posts img {
+.test img, .icons img , .followee_posts img,.own_posts img {
   width: 24px;
   height: 24px;
 }
