--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1091,6 +1091,127 @@ xcustom form elements
 }
 /* End of jquery routine content-filter styling (filter exercises type). */
 
+/* hide the info_box div. it would appear when clicking on an image (details in script). 
+It is preferred than a hidden div since it does not takes a space in the page.*/
+
+.info_box {
+  display: none;
+    width: 450px;
+     position: fixed;
+       top: 50%;
+        left: 50%;
+          z-index: 9;
+           -webkit-transform: translate(-50%,-50%);
+             -ms-transform: translate(-50%,-50%);
+               -o-transform: translate(-50%,-50%);
+                transform: translate(-50%,-50%);
+                  background-color: #f0f0f0;
+                    padding: 15px;
+}
+
+.body-inactive {
+  background-color: rgba(0,0,0,0.60); /* view %90 of opacity out of %100.Other zeros are RGB values. */
+    display: none;
+      top: 0; 
+      right: 0;
+       left: 0; 
+        bottom: 0; 
+         z-index: 7;
+          position: fixed;
+}
+/*styling for the x button of the info_box */
+
+a#closeIt {
+  padding: 7px; /* disance of x from the top right. */
+   position: absolute; /* relative to the info_box. */
+    top: 0; /* stick to the most top */
+     right: 0; /* sticked to the most right possible. together it's in the top right */
+      color: #333;
+        font-size: 21px;
+          font-weight: bold;
+}
+
+/* styling for sidebar routine */
+
+#wrapper {
+  padding-left: 250px;  transition: all .4s ease 0s;
+}
+
+#sidebar-wrapper {
+  margin-left: -250px;  left: 250px;  width: 250px; background: #000; position: fixed;  height: 100%; overflow-y: auto; z-index: 1000;  transition: all .4s ease 0s;
+}
+
+#page-content-wrapper {
+  width: 100%;
+}
+
+.sidebar-nav {
+  position: absolute; top: 0; width: 250px; list-style: none; margin: 0;  padding: 0;
+  .sidebar-nav li {
+    line-height: 40px;  text-indent: 20px;
+  }
+  .sidebar-nav li a {
+    color: #999;  display: block; text-decoration: none;
+  }
+  .sidebar-nav li a:hover {
+    color: #fff;  background: rgba(255,255,255,.2); text-decoration: none;
+  }
+  .sidebar-nav li a:active {
+    text-decoration: none;
+  }
+  .sidebar-nav li a:focus {
+    text-decoration: none;
+  }
+  .sidebar-nav > .sidebar-brand {
+    height: 65px; line-height: 60px;  font-size: 18px;
+  }
+  .sidebar-nav > .sidebar-brand a {
+    color: #999;
+  }
+  .sidebar-nav > .sidebar-brand a:hover {
+    color: #fff;  background: none;
+  }
+}
+
+.content-header {
+  height: 65px; line-height: 65px;
+  .content-header h1 {
+    margin: 0;  margin-left: 20px;  line-height: 65px;  display: inline-block;
+  }
+}
+
+#menu-toggle {
+  display: none;
+}
+
+.inset {
+  padding: 20px;
+}
+
+#wrapper {
+  padding-left: 0;
+}
+
+#sidebar-wrapper {
+  left: 0;
+}
+
+#wrapper.active {
+  position: relative; left: 250px;
+  #wrapper.active #sidebar-wrapper {
+    left: 250px;  width: 250px; transition: all .4s ease 0s;
+  }
+}
+
+#menu-toggle {
+  display: inline-block;
+}
+
+.inset {
+  padding: 15px;
+}
+
+/* end of sidebar routine */
 
 .errors 
 {
