--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,6 +5,9 @@ $primaryColor: #eeffcc;
 
 body {
     background: $primaryColor;
+    overflow-x: hidden; /*Clip the left/right edges of the content inside the <div> element - if it overflows the element's content area: */
+    height: 100%; /* Cover all (100%) of the container for the body with its content */
+
 }
 
 $container-width: 100%;
@@ -442,6 +445,7 @@ Primary style
 
 html {
   font-size: 62.5%;
+  height: 100%;
 }
 
 html * {
@@ -498,21 +502,62 @@ Main Components
     left: auto!important;
     display: inherit!important;
 }
-#sidebar-nav{
-left: auto!important;
- display: none;
- ul{
- list-style: none;
- padding-left: 10px;
- }
+
+main {
+  position: relative;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  -webkit-transition: all 0.35s cubic-bezier(1, 1, 1, 1);
+  -moz-transition: all 0.35s cubic-bezier(1, 1, 1, 1);
+  -ms-transition: all 0.35s cubic-bezier(1, 1, 1, 1);
+  -o-transition: all 0.35s cubic-bezier(1, 1, 1, 1);
+  transition: all 0.35s cubic-bezier(1, 1, 1, 1); 
 }
-#wrapper.pushWrapper {
-    -webkit-transform: translate3d(-250px, 0, 0)!important;
-    -moz-transform: translate3d(-250px, 0, 0)!important;
-    -ms-transform: translate3d(-250px, 0, 0)!important;
-    -o-transform: translate3d(-250px, 0, 0)!important;
-    transform: translate3d(-250px, 0, 0)!important;
+
+#main.pushWrapper{
+  -webkit-transform: translate3d(-250px, 0, 0);
+  -moz-transform: translate3d(-250px, 0, 0);
+  -ms-transform: translate3d(-250px, 0, 0);
+  -o-transform: translate3d(-250px, 0, 0);
+  transform: translate3d(-250px, 0, 0);
 }
+
+
+
+#sidebar-nav {
+  position: fixed;
+  width: 250px;
+  top: 0;
+  bottom: 0;
+  right:0;
+  background-color: #000;
+  z-index:99; 
+  -webkit-transition: all 0.35s cubic-bezier(1, 1, 1, 1);
+  -moz-transition: all 0.35s cubic-bezier(1, 1, 1, 1);
+  -ms-transition: all 0.35s cubic-bezier(1, 1, 1, 1);
+  -o-transition: all 0.35s cubic-bezier(1, 1, 1, 1);
+  transition: all 0.35s cubic-bezier(1, 1, 1, 1);
+  -webkit-transform: translate3d(100%, 0, 0);
+  -moz-transform: translate3d(100%, 0, 0);
+  -ms-transform: translate3d(100%, 0, 0);
+  -o-transform: translate3d(100%, 0, 0);
+  transform: translate3d(100%, 0, 0);
+
+}
+
+#sidebar-nav.showSidebar 
+{
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+
+}
+
 .cd-main-content {
   position: relative;
   min-height: 100vh;
@@ -526,6 +571,9 @@ left: auto!important;
       width: 100%;
     }
 
+#sidebar-nav ul form button[type="submit"]{
+  display: none;
+}
     .cd-gallery {
       padding-top: 26px+$tab-filter-height;
     }
