moving routine filter outside the form

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2371,12 +2371,14 @@ main {
 
 #sidebar-nav {
   position: fixed;
-  width: 250px;
+  width: 500px;
   top: 0;
   bottom: 0;
   right: 0;
   background-color: #000;
   z-index: 99;
+  overflow-y: scroll;
+  overflow: auto;
   transition: all 0.35s cubic-bezier(1, 1, 1, 1);
   -webkit-transform: translate3d(100%, 0, 0);
   transform: translate3d(100%, 0, 0);
